'icon' IDL attribute of HTMLMenuItemElement should reflect as URL.

This resolve a local path issue of reflection-misc.html.
The new behavior matches to Firefox.

BUG=651664

Review-Url: https://codereview.chromium.org/2380683007
Cr-Commit-Position: refs/heads/master@{#422058}

Former-commit-id: 06c4bb2566842d57a213983bc44f753e9b8206df